[package]
name = "fueros"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["alexdevteam", "lapinozz", "jazzfool"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
name = "fueros"
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true

[features]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fueros_derive = { path = "derive" }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
futures = "0.3"
wasm-bindgen-futures = "0.4"
