[package]
name = "fueros_derive"
description = "Derive macros for Fueros"
version = "0.1.0"
authors = ["jazzfool"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
# absolutely incredible
# all rust deps are 1.0
# is this real life?
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
# just had to go and ruin it eh
heck = "0.4"
